--- a/themes/apollo/_config.yml
+++ b/themes/apollo/_config.yml
@@ -1,9 +1,8 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
-    Rss: /atom.xml
+    Weibo: http://weibo.com/wyhhahaha
+    GitHub: https://github.com/soundtina
 
 favicon: /favicon.png
 logo: /favicon.png
@@ -15,9 +14,9 @@ duoshuo:
 
 # Analytics
 # google-analytics:
-ga: UA-65933410-1
+#ga: UA-65933410-1
 # baidu-analytics:
-ba: //hm.baidu.com/hm.js?a36e15d9e2adec9a21fcdd9f686b1ed2
+#ba: //hm.baidu.com/hm.js?a36e15d9e2adec9a21fcdd9f686b1ed2
 
 # Copyright Infomation
 startyear: 2015
@@ -25,4 +24,4 @@ startyear: 2015
 # Font CDN
 #true : use google fonts api, not stable for chinese visitor sometimes, caused by force majeure factor
 #false: use useso fonts api instead of google's, great response speed for chinese visitor
-googlefonts: true
+googlefonts: false
