--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.2.0"
+    "version": "3.3.8"
+  },
+  "scripts": {
+    "dev": "hexo server"
   },
   "dependencies": {
     "hexo": "^3.1.1",
